# verum

./: .aot-blockers.md  .codecov.yml  .gitignore  .gitmodules  .mailmap  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  Makefile  NEXT_SESSION.md  README.md  RELEASES.md  Verum.toml  build-windows.ps1  clippy.toml  deny.toml  rust-toolchain.toml  vtest.toml
crates/cvc5-sys/: Cargo.toml  README.md  build.rs
crates/cvc5-sys/src/: lib.rs
crates/verum_ast/: Cargo.toml  README.md
crates/verum_ast/src/: bitfield.rs  cfg.rs  context.rs  decl.rs  expr.rs  ffi.rs  lib.rs  literal.rs  meta_value.rs  pattern.rs  pretty.rs  span.rs  stmt.rs  ty.rs  visitor.rs
crates/verum_ast/tests/: attr_tests.rs  capability_tests.rs  context_polymorphism_tests.rs  expr_tests.rs  ffi_tests.rs  ffi_visitor_tests.rs  integration_comprehensive.rs  literal_tests.rs  predicate_tests.rs  stmt_tests_comprehensive.rs  test_construction.rs  test_declarations.rs  test_equality.rs  test_expressions.rs  test_path.rs  test_patterns.rs  test_serialization.rs  test_span.rs  test_types.rs  test_visitor.rs  type_tests_comprehensive.rs  type_v6_features.rs  where_clause_decl_tests.rs  where_clause_visitor_test.rs
crates/verum_cbgr/: Cargo.toml  README.md
crates/verum_cbgr/benches/: README.md  array_analysis_bench.rs  context_enhancements_bench.rs  escape_analysis_bench.rs  field_heap_bench.rs  flow_functions_bench.rs  ir_call_bench.rs  loop_unrolling_bench.rs  points_to_bench.rs  predicate_abstraction_bench.rs  production_targets.rs  smt_alias_bench.rs  type_analysis_bench.rs  value_tracking_bench.rs  z3_feasibility_bench.rs
crates/verum_cbgr/fuzz/: .gitignore  Cargo.toml  README.md
crates/verum_cbgr/src/: CLAUDE.md  analysis.rs  array_analysis.rs  call_graph.rs  concurrency_analysis.rs  context_enhancements.rs  diagnostics.rs  dominance_analysis.rs  escape_analysis.rs  escape_categories.rs  escape_codegen_integration.rs  field_heap_tracking.rs  flow_functions.rs  ir_call_extraction.rs  lib.rs  lifetime_analysis.rs  loop_unrolling.rs  nll_analysis.rs  ownership_analysis.rs  points_to_analysis.rs  polonius_analysis.rs  predicate_abstraction.rs  promotion_decision.rs  security_tests.rs  smt_alias_verification.rs  ssa.rs  tier_analysis.rs  tier_types.rs  type_analysis.rs  value_tracking.rs  z3_feasibility.rs
crates/verum_cbgr/tests/: analysis_tests.rs  array_analysis_tests.rs  closure_escape_tests.rs  context_enhancements_tests.rs  escape_analysis_tests.rs  escape_categories_tests.rs  field_heap_tests.rs  flow_functions_tests.rs  ir_call_tests.rs  loop_unrolling_tests.rs  points_to_tests.rs  predicate_abstraction_integration_tests.rs  predicate_abstraction_tests.rs  smt_alias_tests.rs  ssa_tests.rs  type_analysis_tests.rs  value_tracking_tests.rs  z3_feasibility_tests.rs
crates/verum_cli/: COG_MANAGER_IMPLEMENTATION.md  Cargo.toml  DEVELOPER_GUIDE.md  README.md  USAGE_EXAMPLES.md  build.rs  spec.md
crates/verum_cli/benches/: fmt_throughput.rs  lint_throughput.rs  script_cold_start.rs
crates/verum_cli/examples/: README.md  Verum.toml.example  async_context.vr  cbgr_references.vr  debug_errors.rs  debug_parse.rs  debug_parse_cogs.rs  debug_parse_logger.rs  debug_parse_router.rs  debug_parse_search.rs  debug_self.rs  fibonacci.vr  hello_world.vr  refinement_types.vr
crates/verum_cli/src/: cache.rs  cog.rs  cog_manager.rs  config.rs  error.rs  feature_overrides.rs  lib.rs  main.rs  repl.rs  script.rs  templates.rs  tier.rs  ui.rs
crates/verum_cli/tests/: add_tests.rs  audit_accessibility.rs  audit_bridge_discharge.rs  audit_coord_per_theorem.rs  audit_cross_format_roundtrip.rs  audit_framework_conflicts.rs  audit_hygiene_strict.rs  audit_kernel_recheck.rs  audit_kernel_soundness.rs  audit_ladder_monotonicity.rs  audit_tests.rs  benchmark_integration.rs  cache_closure_integration.rs  cache_manager_tests.rs  cache_tests.rs  cert_replay_integration.rs  check_basic.rs  cli_integration_tests.rs  client_tests.rs  cog_manager_tests.rs  cog_registry_integration.rs  command_tests.rs  config_tests.rs  cubical_integration.rs  doc_render_integration.rs  enterprise_tests.rs  export_cert_loading.rs  export_lineage_tests.rs  export_provenance_sidecar.rs  export_v2_core_proof.rs  extract_cli.rs  feature_gates_e2e.rs  fmt_basic.rs  fmt_check.rs  fmt_idempotence.rs  fmt_parallel.rs  fmt_parse_policy.rs  fmt_perf_contract.rs  fmt_roundtrip.rs  fmt_stdin.rs  (+47 more)
crates/verum_codegen/: Cargo.toml
crates/verum_codegen/benches/: lowering_regression.rs
crates/verum_codegen/src/: error.rs  lib.rs  link.rs  proof_export.rs  runtime_stubs.rs
crates/verum_common/: Cargo.toml  SEMANTIC_TYPES_API.md  SEMANTIC_TYPES_QUICKREF.md
crates/verum_common/src/: atomic_ordering.rs  (+30 more)
crates/verum_compiler/: CLAUDE.md  COMPLETE_INTEGRATION_REPORT.md  Cargo.toml  FFI_BOUNDARY_README.md  IMPLEMENTATION.md  INCREMENTAL_COMPILATION.md  INTEGRATION_COMPLETE.md  Makefile  PIPELINE_IMPLEMENTATION.md  README.md  README_BUILD.md  build.rs
crates/verum_core/: Cargo.toml
crates/verum_dap/: Cargo.toml
crates/verum_diagnostics/: CONTEXT_ERRORS.md  Cargo.toml  README.md  RICH_DIAGNOSTICS.md  VISUAL_EXAMPLE.md
crates/verum_error/: Cargo.toml  MIGRATION_GUIDE.md  README.md  build.rs
crates/verum_fast_parser/: Cargo.toml  README.md
crates/verum_integration_tests/: Cargo.toml  QUICK_START.md  README.md
crates/verum_interactive/: Cargo.toml
crates/verum_kernel/: Cargo.toml
crates/verum_lexer/: Cargo.toml  README.md
crates/verum_lsp/: Cargo.toml  INCREMENTAL_PARSING.md  README.md
crates/verum_modules/: Cargo.toml  README.md
crates/verum_parser/: Cargo.toml
crates/verum_protocol_types/: Cargo.toml  README.md
crates/verum_smt/: CVC5_BACKEND.md  Cargo.toml  README.md
crates/verum_stdlib_precompiler/: Cargo.toml
crates/verum_syntax/: Cargo.toml
crates/verum_toolchain/: Cargo.toml
crates/verum_types/: Cargo.toml  README.md
crates/verum_vbc/: CLAUDE.md  Cargo.toml
crates/verum_verification/: Cargo.toml  README.md
vcs/fuzz/: Cargo.toml  lib.rs
vcs/proof_stability/: Cargo.toml  proof_stability.toml
(+15371 files in other folders)
