[workspace]
resolver = "2"
members = [
    "crates/verum_cli",
    "crates/verum_toolchain",
    "crates/verum_compiler",
    "crates/verum_common",
    "crates/verum_error",
    "crates/verum_syntax",
    "crates/verum_lexer",
    "crates/verum_parser",
    "crates/verum_fast_parser",
    "crates/verum_ast",
    "crates/verum_protocol_types",
    "crates/verum_types",
    "crates/verum_cbgr",
    "crates/verum_codegen",
    "crates/verum_diagnostics",
    "crates/cvc5-sys",
    "crates/verum_smt",
    "crates/verum_modules",
    "crates/verum_verification",
    "crates/verum_integration_tests",
    "crates/verum_lsp",
    "crates/verum_interactive",
    # DAP (Debug Adapter Protocol) server
    "crates/verum_dap",
    # VBC (Verum Bytecode) - unified IR for interpreter/JIT/AOT
    "crates/verum_vbc",
    # LLVM/MLIR infrastructure (universal bindings)
    "crates/llvm/verum_llvm_sys",
    "crates/llvm/verum_llvm_derive",
    "crates/llvm/verum_llvm",
    "crates/llvm/verum_mlir_sys",
    "crates/llvm/verum_mlir_macro",
    "crates/llvm/verum_mlir",
    "crates/llvm/verum_tblgen",
    # VCS (Verum Conformance Suite) crates
    "vcs/runner/vtest",
    "vcs/runner/vbench",
    "vcs/runner/vfuzz",
    "vcs/tools/isabelle_graph_import",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Verum Team"]
license = "Apache-2.0"
repository = "https://github.com/verum-lang/verum"

[workspace.dependencies]
# Internal crates
verum_common = { path = "crates/verum_common", features = ["serde"] }
verum_error = { path = "crates/verum_error" }
verum_syntax = { path = "crates/verum_syntax" }
verum_lexer = { path = "crates/verum_lexer" }
verum_parser = { path = "crates/verum_parser" }
verum_fast_parser = { path = "crates/verum_fast_parser" }
verum_ast = { path = "crates/verum_ast" }
verum_protocol_types = { path = "crates/verum_protocol_types" }
verum_types = { path = "crates/verum_types" }
verum_cbgr = { path = "crates/verum_cbgr" }
verum_toolchain = { path = "crates/verum_toolchain" }
verum_codegen = { path = "crates/verum_codegen" }
verum_compiler = { path = "crates/verum_compiler" }
verum_diagnostics = { path = "crates/verum_diagnostics" }
verum_smt = { path = "crates/verum_smt" }
verum_lsp = { path = "crates/verum_lsp" }
verum_interactive = { path = "crates/verum_interactive" }
verum_modules = { path = "crates/verum_modules" }
verum_verification = { path = "crates/verum_verification" }
verum_dap = { path = "crates/verum_dap" }
verum_vbc = { path = "crates/verum_vbc" }
# LLVM/MLIR infrastructure
verum_llvm_sys = { path = "crates/llvm/verum_llvm_sys" }
verum_llvm_derive = { path = "crates/llvm/verum_llvm_derive" }
verum_llvm = { path = "crates/llvm/verum_llvm" }
verum_mlir_sys = { path = "crates/llvm/verum_mlir_sys" }
verum_mlir_macro = { path = "crates/llvm/verum_mlir_macro" }
verum_mlir = { path = "crates/llvm/verum_mlir", features = [] }
verum_tblgen = { path = "crates/llvm/verum_tblgen" }

# External dependencies - only reliable crates
# Core utilities
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Stack overflow prevention
stacker = "0.1"

# Data structures
bitflags = { version = "2.11", features = ["serde"] }
dashmap = "6.1.0"
parking_lot = "0.12.5"
smallvec = "1.15.1"
indexmap = "2.14.0"
petgraph = "0.8.3"

# Parsing and lexing
logos = "0.16.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Code generation
# MLIR-based code generation via verum_codegen (uses verum_mlir crate)
# LLVM/LLD bindings via verum_llvm_sys (local build from llvm/install/)

# Low-level FFI
libc = "0.2"
cc = "1.2"

# SMT solving — bundled (statically compiled from source) for self-contained binary
z3 = { version = "0.20.0", features = ["bundled"] }
z3-sys = { version = "0.11.0", features = ["bundled"] }
cvc5-sys = { path = "crates/cvc5-sys" }

# Testing
proptest = "1.9.0"
quickcheck = "1.0.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.14"
pretty_assertions = "1.4"

# Additional serialization
serde_yaml = "0.9"
toml = "0.9"

# Async utilities
tokio-stream = "0.1.18"

# Concurrency
rayon = "1.12"
crossbeam = "0.8.4"
num_cpus = "1.17.0"
# Optimized tokio: include only essential features for faster builds
# Remove: rustls (causes aws-lc compilation issues), tls features
# Keep: core, sync, time, macros for runtime management
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util", "io-std", "net", "fs"] }
futures = "0.3.31"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env", "unicode", "suggestions"] }
clap_complete = "4.5"
colored = "3.0.0"

# File discovery and pattern matching
regex = "1.12.2"
glob = "0.3.3"
walkdir = "2.5.0"
once_cell = "1.21"

# Terminal output
indicatif = "0.18.3"
atty = "0.2"

# Time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Diff output
similar = "2.7"

# Hashing
blake3 = "1.5"
sha2 = "0.11"
hex = "0.4"

# File watching
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

# Random number generation
rand = "0.10.1"
rand_chacha = "0.10"

# Process management
wait-timeout = "0.2"

# Configuration
dirs = "6.0.0"

# Signal handling
ctrlc = "3.4"

# CSV output
csv = "1.3.1"

# Statistics (for proof_stability)
statrs = "0.18.0"

# UUID (for proof_stability)
uuid = { version = "1.19", features = ["v4", "serde"] }

# Hashing (additional)
md5 = "0.8"

# Binary serialization
bincode = "1.3"

# Tokenization (HuggingFace)
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }

# Unicode support
unicode-normalization = "0.1"

# Logging (alternative to tracing)
log = "0.4"
env_logger = "0.11"

[profile.dev]
# Development profile optimized for build speed
opt-level = 0
debug = 1            # Keep minimal debug info for faster compilation
incremental = true   # Enable incremental compilation
split-debuginfo = "packed"
lto = false          # Disable LTO for faster compilation
codegen-units = 16   # Balanced parallelism

[profile.release]
# Release profile optimized for maximum performance
# Note: LTO disabled due to rustc SIGSEGV on large projects with LLVM static libs
opt-level = 3        # Maximum performance optimization
lto = false          # Disabled: causes rustc SIGSEGV with large LLVM static libs
codegen-units = 1    # Single codegen unit for best optimization without LTO
strip = true         # Strip symbols to reduce binary size
split-debuginfo = "packed"
panic = "abort"      # Smaller binaries, faster linking

# Alternative: Use this profile for maximum optimization with LTO
# May crash on some systems due to high memory usage
[profile.release-lto]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16

# Release build that keeps DWARF line tables so crash-report
# backtraces resolve to `file:line`. Optimisation matches
# `[profile.release]`; `strip = "none"` + `split-debuginfo = "packed"`
# produce an external `.dSYM` (macOS) / `.dwp` (Linux) bundle next to
# the binary. Main binary size is unchanged vs `release`.
#
# Do NOT fold this into `[profile.release]`. Enabling DWARF in the
# primary release profile re-introduces the LLVM cxa-guard race:
# rebuild produced 36/50 SIGSEGV vs 0/50 with this split. The extra
# Dwarf-emitter passes expand the lazy-init surface that races rayon
# worker wake paths.
#
# Usage: `cargo build --profile release-debug-tables --bin verum`
[profile.release-debug-tables]
inherits = "release"
debug = "line-tables-only"
strip = "none"
split-debuginfo = "packed"

[profile.test]
# Test profile with minimal optimization
opt-level = 0
debug = 1
incremental = true
lto = false
codegen-units = 16

# Workspace-level lints
# These lints are allowed because they represent design trade-offs, not bugs
[workspace.lints.clippy]
# Large error types are intentional - rich error context is more important than stack size
result_large_err = "allow"
# Enum variants with large size differences are intentional for AST/IR nodes
large_enum_variant = "allow"
# Complex types are sometimes necessary for type safety
type_complexity = "allow"
# Multiple generic bounds on same param can be clearer than where clauses
multiple_bound_locations = "allow"
# Test files and serializer round-trip fixtures use arbitrary floats
# like `3.14159`, `2.71828` as payloads — they are NOT meant to be the
# geometric π / e constants, and clippy's "approx value of PI / E" lint
# misfires across ~40 such sites. The constants it suggests would
# change the round-tripped bytes and break the tests.
approx_constant = "allow"
# f.init(); f.x = 1; f.y = 2 is clearer than Default { x: 1, y: 2, ..f.init() }
# for builder-style code, especially when default() has side effects
# (logging, counter increments). ~23 sites across verum_vbc tests.
field_reassign_with_default = "allow"

# Custom profile for benchmarking
[profile.bench]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
