[package]
name = "verum_ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
[lints]
workspace = true


[dependencies]
serde = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
indexmap = { workspace = true }
bitflags = { workspace = true }
verum_common = { workspace = true }
stacker = "0.1"
# verum_ast only needs core types (List, Text, Maybe, Heap) from verum_common

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }