[package]
name = "verum_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Minimal external dependencies - only serde for serialization
serde = { workspace = true, optional = true }
backtrace = { version = "0.3", optional = true }
tower-lsp = { version = "0.20", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde"]
backtrace = ["dep:backtrace"]
anyhow-compat = ["dep:anyhow"]
lsp = ["dep:tower-lsp"]

