[package]
name = "verum_compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "verum_compiler"
path = "src/lib.rs"

[dependencies]
verum_lexer = { workspace = true }
verum_fast_parser = { workspace = true }
verum_ast = { workspace = true }
verum_types = { workspace = true }
verum_cbgr = { workspace = true }
verum_common = { workspace = true }
verum_diagnostics = { workspace = true }
verum_smt = { workspace = true }
verum_verification = { workspace = true }
verum_modules = { workspace = true }
verum_codegen = { workspace = true }
verum_llvm_sys = { workspace = true }
verum_vbc = { workspace = true, features = ["codegen", "ffi"] }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
is-terminal = "0.4"
chrono = "0.4.42"
regex = "1.12.2"
serde_yaml = { workspace = true }
quick-xml = "0.39"
z3 = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }
num_cpus = "1.17"

# Binary serialization for cache
bincode = { workspace = true }

# Unified hashing (Blake3)
blake3 = { workspace = true }
hex = { workspace = true }

# Content-addressed storage dependencies
zstd = "0.13"
filetime = "0.2"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.14"

[[bench]]
name = "compilation_regression"
harness = false

[build-dependencies]
zstd = "0.13"

[features]
default = []
metal = ["verum_vbc/metal"]

[target.'cfg(target_os = "macos")'.features]
# Note: Cargo doesn't support target-conditional default features directly.
# Users on macOS should build with: cargo build --features metal
# The CI pipeline enables this via: VERUM_FEATURES="metal"
