[package]
name = "verum_integration_tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
verum_ast.workspace = true
verum_cbgr.workspace = true
verum_codegen = { workspace = true }
verum_diagnostics.workspace = true
verum_error.workspace = true
verum_lexer.workspace = true
verum_parser.workspace = true
verum_common.workspace = true
verum_compiler.workspace = true
verum_types.workspace = true
verum_vbc.workspace = true

# External dependencies
serde.workspace = true
serde_json.workspace = true
tempfile = "3.14"
tokio.workspace = true
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
serial_test = "3.2"
# Testing tokio: use workspace definition plus test utilities
tokio = { workspace = true, features = ["test-util"] }

