[package]
name = "verum_interactive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive environment for Verum: REPL, Script Parser, and Playbook TUI"
keywords = ["verum", "repl", "interactive", "playbook", "tui"]
categories = ["development-tools"]
[lints]
workspace = true


[dependencies]
# Core Verum crates (only the ones actually used directly)
verum_common = { workspace = true }  # List, Map, Text
verum_ast = { workspace = true }      # FileId, Span

# VBC interpreter for actual code execution
verum_vbc = { workspace = true, features = ["codegen"] }

# Type system - type checking, inference, display
verum_types = { workspace = true }

# LSP integration - provides script parsing, incremental parsing, recovery
# Also re-exports verum_parser, verum_lexer, verum_diagnostics, verum_error
verum_lsp = { workspace = true }

# TUI dependencies
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { workspace = true }

# Serialization for .vrbook format
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.19", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["playbook"]
playbook = []
